src/test/ui/derives/derives-span-Hash-tuple-struct.stderr
error[E0277]: the trait bound `Error: std::hash::Hash` is not satisfied
  --> $DIR/derives-span-Hash-tuple-struct.rs:8:5
   |
LL |     Error
   |     ^^^^^ the trait `std::hash::Hash` is not implemented for `Error`
   |
   = note: required by `std::hash::Hash::hash`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
